--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -5,27 +5,27 @@
  */
 
 body {
-    margin-top: 100px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
-    padding-top: 100px;
+    margin-top: 50px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+    /*padding-top: 100px;*/
 }
 
-.header-image {
-    display: block;
-    width: 100%;
-    text-align: center;
-    background: url('http://placehold.it/1900x500') no-repeat center center scroll;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
-}
+/*.header-image {*/
+    /*display: block;*/
+    /*width: 100%;*/
+    /*text-align: center;*/
+    /*background: url('http://placehold.it/1900x500') no-repeat center center scroll;*/
+    /*-webkit-background-size: cover;*/
+    /*-moz-background-size: cover;*/
+    /*background-size: cover;*/
+    /*-o-background-size: cover;*/
+/*}*/
 
 .headline {
-    padding: 120px 0;
+    padding: 30px 0;
 }
 
 .headline h1 {
-    font-size: 130px;
+    font-size: 18px;
     background: #fff;
     background: rgba(255,255,255,0.9);
 }
