--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1081,7 +1081,7 @@ html {
 
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-body {
+body, #target li {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
