--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -9,6 +9,9 @@ body {
     /*padding-top: 100px;*/
 }
 
+#target {
+    font-size: 18px;
+}
 /*.header-image {*/
     /*display: block;*/
     /*width: 100%;*/
@@ -176,4 +179,12 @@ footer {
         margin-bottom: 10px;
         margin-left: 0;
     }
+}
+
+.alert-danger, .alert-info {
+    color: #000;
+}
+
+.alert.alert-danger {
+    margin-bottom: 10px;
 }
